[Fixes #141437687] Resolved issues with header bar image when reducing the page size within the browser window, the image will need to be repeated so as to fill the screen, this also happens on the registration screen.  Also fixed issues with asset alignment on extra small screens with the new menu bar changes and promotional banner changes.

--- a/KeithLink/KeithLink.Web.Presentation/angular-app/app/styles/components/_user-bar.scss
+++ b/KeithLink/KeithLink.Web.Presentation/angular-app/app/styles/components/_user-bar.scss
@@ -1,8 +1,7 @@
 .user-bar {
   font-weight: 300;
-  background-image: url('../images/Background_Header.jpg');
-  background-position: 30% 60%;
-  background-repeat: no-repeat;
+  background-image: url(../images/Background_Header.jpg);
+  background-position: 25% 60%;
   padding: 15px;
 
   .user-bar__notification {
@@ -59,8 +58,11 @@
   border-bottom: 1px solid $color-border;
 }
 
+.main-user-bar {
+  background-image: url(../images/Background_Header.jpg);
+}
+
 .user-bar-mobile {
-  background-image: url('../images/Background_Header.jpg');
 
   text-align: center;
 
